# zeen-financial-copilot

./: .gitignore  .mcp.json  AUTOMATION.md  CLAUDE.md  PROGRESS.md  README.md  coverage.json  pyproject.toml
.claude/: launch.json  settings.local.json
.claude/agents/: architect.md  builder.md  tester.md
agent_runtime/: __init__.py  graph.py  state.py  tracing.py
agent_runtime/nodes/: __init__.py  error_handler.py  input_validator.py  llm_invoke.py  post_llm_gate.py  post_tool_gate.py  pre_llm_gate.py  pre_tool_gate.py  response_formatter.py  tool_executor.py  tool_router.py
backend/: __init__.py  config.py  dependencies.py  main.py
backend/auth/: middleware.py  models.py
backend/demo_tools/: __init__.py  financial_calc.py  market_data.py  portfolio.py
backend/routers/: chat.py  demo.py  health.py  sessions.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
memory/: __init__.py  checkpointer.py  conversation.py  schemas.py  session.py  user_profile.py
migrations/: 001_create_conversations.sql  002_create_messages.sql  003_create_user_profiles.sql  004_create_tool_usage_log.sql  005_enable_rls.sql  006_create_gate_audit_log.sql
risk_gates/: __init__.py  evaluator.py  schemas.py
tests/: test_agent_gate_nodes.py  test_backend_coverage.py  test_backend_routers.py  test_backend_smoke.py  test_backend_stream.py  test_coverage_boost.py  test_memory_extended.py  test_scenario_service.py  test_tools_mcp_client.py
tools/: __init__.py  mcp_client.py  production_finance_server.py  registry.py  sandbox.py  schemas.py
(+92 files in other folders)
